@@ -178,6 +178,13 @@ class ParseQueryTest(TestCase):
         assert result['age_to'] > timezone.now() - timedelta(hours=13)
         assert result['age_to'] < timezone.now() - timedelta(hours=11)
 
+    def test_first_seen_range(self):
+        result = self.parse_query('firstSeen:-24h firstSeen:+12h')
+        assert result['age_from'] > timezone.now() - timedelta(hours=25)
+        assert result['age_from'] < timezone.now() - timedelta(hours=23)
+        assert result['age_to'] > timezone.now() - timedelta(hours=13)
+        assert result['age_to'] < timezone.now() - timedelta(hours=11)
+
     def test_date_range(self):
         result = self.parse_query('event.timestamp:>2016-01-01 event.timestamp:<2016-01-02')
         assert result['date_from'] == datetime(2016, 1, 1, tzinfo=timezone.utc)
@@ -200,6 +207,20 @@ class ParseQueryTest(TestCase):
         assert result['date_from_inclusive']
         assert result['date_to'] == date_value + timedelta(minutes=6)
         assert not result['date_to_inclusive']
+
+    def test_active_range(self):
+        result = self.parse_query('activeSince:-24h activeSince:+12h')
+        assert result['active_at_from'] > timezone.now() - timedelta(hours=25)
+        assert result['active_at_from'] < timezone.now() - timedelta(hours=23)
+        assert result['active_at_to'] > timezone.now() - timedelta(hours=13)
+        assert result['active_at_to'] < timezone.now() - timedelta(hours=11)
+
+    def test_last_seen_range(self):
+        result = self.parse_query('lastSeen:-24h lastSeen:+12h')
+        assert result['last_seen_from'] > timezone.now() - timedelta(hours=25)
+        assert result['last_seen_from'] < timezone.now() - timedelta(hours=23)
+        assert result['last_seen_to'] > timezone.now() - timedelta(hours=13)
+        assert result['last_seen_to'] < timezone.now() - timedelta(hours=11)
 
     def test_has_tag(self):
         result = self.parse_query('has:foo')
